# srtTranslator

./: README.md  package-lock.json  package.json  pyproject.toml  test.srt  trans.py  translate.py
fastapi-react/: package-lock.json  package.json
fastapi-react/public/: index.html
fastapi-react/src/: App.css  App.js  DownloadFile.js  UploadTranslate.js  index.js  theme.js
